--- a/src/gtk-3.0/sass/_transparent_widgets.scss
+++ b/src/gtk-3.0/sass/_transparent_widgets.scss
@@ -193,7 +193,7 @@ filechooser {
 
 %dark_sidebar_scrollbar {
 
-  border-color: darken($dark_sidebar_bg, 5%);
+  border-color: $borders_color;
 
   &.overlay-indicator:not(.dragging):not(.hovering) slider {
     background-color: lighten($dark_sidebar_fg, 15%);
@@ -211,6 +211,6 @@ filechooser {
     }
   }
   trough {
-    background-color: darken($dark_sidebar_bg, 5%);
+    background-color: if($variant == 'light', darken($dark_sidebar_bg, 8%), lighten($dark_sidebar_bg, 3%));
   }
 }
